# palautusrepositorio

./: .gitignore  README.md
viikko1/nhl-statistics/: .coverage
viikko1/nhl-statistics/src/: index.py  player_reader.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: statisticsservice_test.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/git-branch/: index.py  summa.py
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/tests/: increase_counter.robot
viikko3/login/: log.html  output.xml  report.html
viikko3/login/src/services/: user_service.py
viikko3/login/src/tests/: home.robot  login.robot  (+2 more)
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/verkkokauppa/: .coverage
viikko5/: jokin_tiedosto.txt  review.md  vibe.md
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/src/: kayttoliittyma.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/: agent.md
viikko7/kivi-paperi-sakset/: GAME_UPDATE_5_WINS.md  TEST_DOCUMENTATION.md  WEB_README.md  pyproject.toml
viikko7/kivi-paperi-sakset-original/src/: kps.py
viikko7/kivi-paperi-sakset/src/: index.py  kps.py  tekoaly.py  tuomari.py  web_app.py
viikko7/kivi-paperi-sakset/src/static/: style.css
viikko7/kivi-paperi-sakset/src/templates/: base.html  index.html  pelaa.html
viikko7/kivi-paperi-sakset/src/tests/: __init__.py  test_kps.py  test_tekoaly.py  test_tuomari.py  test_web_app.py
(+2 files in other folders)
